Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a {
 
 #details {
   width: 100%;
-  display: inline;
+  display: inline-block;
   text-align: center;
   background-color: red;
 }
